# sipcompass

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.yaml  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: backtest.py  cli.py  data_fetcher.py  data_loader.py  data_persistence.py  finance.py  optimizer.py
tests/: test_backtest.py  test_config_validation.py  test_finance.py
